# ai-business-intelligence

./: .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci-cd.yml.disabled  codeql-analysis.yml  codeql-analysis.yml.disabled  dependency-review.yml  dependency-review.yml.disabled
backend/: Dockerfile.dev  env.example  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: e7df42685fc0_initial_schema_with_all_models.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  data_sources.py  dependencies.py  queries.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  base.py  dashboard.py  data_source.py  organization.py  query.py  user.py
backend/app/schemas/: __init__.py  dashboard.py  data_source.py  organization.py  query.py  user.py
backend/app/services/: __init__.py  auth.py  database_adapter.py  nlp_service.py  query_executor.py
backend/requirements/: base.txt  dev.txt
backend/tests/: conftest.py  test_health.py
backend/tests/unit/: test_config.py  test_models.py  test_schemas.py
docs/: README.md
docs/developer/: ci-cd.md  docker-setup.md  setup.md
frontend/: .eslintrc.json  Dockerfile.dev  env.example  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/__tests__/: index.test.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: _app.tsx  index.tsx  login.tsx  register.tsx
frontend/src/services/: api.ts
scripts/: init-db.sql  test-docker-setup.sh
